@@ -2,8 +2,8 @@
 
 AUTOMAKE_OPTIONS = 1.4 gnu
 
-DEFS = -D_GNU_SOURCE -DHAVE_CONFIG_H -Wall
-AM_CFLAGS = -Wall
+DEFS = -D_GNU_SOURCE -DHAVE_CONFIG_H -Wall -Wno-pointer-sign
+AM_CFLAGS = -Wall -Wno-pointer-sign
 AM_CPPFLAGS = -DSBINDIR='"@sbindir@"'
 INCLUDES = @GELFINCLUDE@
 
